# ULTRETH---Ethereum-Real-Time-Mempool-Intelligence-Terminal-Rust-Solidity-

./: .gitignore  Cargo.toml  README.md  build.rs
ULTRETH---Ethereum-Real-Time-Mempool-Intelligence-Terminal-Rust-Solidity-.git/: config
src/: contract_bindings.rs  display.rs  ethereum.rs  main.rs  utils.rs
src/contracts/: UltrethContract.sol
